fix: nowrap on table cells

--- a/apps/admin/src/styles/base.css
+++ b/apps/admin/src/styles/base.css
@@ -5,6 +5,8 @@ body {
 
 #root {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
 
 * {
